Add sudo to .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services:
 before_install:
   - sudo apt-get -qq update
   - sudo apt-get install -y node npm
-  - npm install -g yarn
+  - sudo npm install -g yarn
 cache:
   directories:
     - website/node_modules
