--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ cache:
     - website/node_modules
 
 script:
+  - chmod -R a+w problem-statement/
   - docker run -ti --rm --volume `pwd`/:/tectonic:z fabianhauser/tectonic:0.1.6 problem-statement/problem-statement.tex
   - mv problem-statement/problem-statement.pdf website/src/
   - cd website
