--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 /website/output/
 /website/node_modules/
-
-
+/project-plan/project-plan.pdf
+/problem-statement/problem-statement.pdf
 
 ## Core latex/pdflatex auxiliary files:
 *.aux
