--- a/website/package.json
+++ b/website/package.json
@@ -10,6 +10,8 @@
     "metalsmith-permalinks": "^0.5.0",
     "metalsmith-rootpath": "^1.0.4",
     "metalsmith-serve": "0.0.7",
-    "metalsmith-watch": "^1.0.3"
+    "metalsmith-watch": "^1.0.3",
+    "metalsmith-in-place": "^3.0.1",
+    "jstransformer-handlebars": "^1.0.0"
   }
 }
